# world_model_lab

./: .gitignore  README.md  pyproject.toml
docs/experiments/: 2026-07-16-motion-weighted-autoencoder.md  2026-07-16-visual-autoencoder-20-epoch.md  2026-07-17-global512-capacity-control.md  2026-07-17-spatial-convgru-dynamics.md  2026-07-17-spatial-dynamics-diagnostics.md  2026-07-17-spatial-dynamics-objective-alignment.md  2026-07-17-spatial-history-diagnostics.md  2026-07-17-spatial-latent-world-model.md  (+9 more)
tests/: test_bootstrap.py  test_bootstrap_experiment.py  test_build_visual_data.py  test_car_env.py  test_collect_data.py  test_dataset.py  test_diagnose_ensemble.py  test_diagnose_model.py  test_diagnose_visual_autoencoder.py  test_diagnose_visual_counterfactual.py  test_diagnose_visual_rollout.py  test_diagnostic_plots.py  test_diagnostics.py  test_ensemble.py  test_evaluate_rollout.py  test_multiseed_experiment.py  test_plot_training.py  test_rollout_training.py  test_run_vjepa_probe.py  test_train_visual_dynamics_objective.py  test_train_visual_dynamics_recursive.py  test_train_visual_latent_model.py  test_train_visual_object_residual.py  test_train_visual_object_slot.py  test_train_world_model.py  test_visual_counterfactual_data.py  test_visual_dataset.py  test_visual_latent_data.py  test_visual_latent_model.py  test_visual_object_position.py  test_visual_object_residual.py  test_visual_object_slot.py  test_visual_observation.py  test_visual_recursive_training.py  test_visual_windows.py  test_visualize.py  test_vjepa_probe.py  visual_fixtures.py
(+76 files in other folders)
