[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-model-lab"
version = "0.1.0"
description = "A small state-space world-model learning lab"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "matplotlib>=3.8",
  "torch>=2.6",
  "Pillow>=12.0",
]

[project.scripts]
world-model-car-demo = "world_model_lab.demo_random_drive:main"
world-model-bootstrap-ensemble = "world_model_lab.bootstrap_experiment:main"
world-model-build-visual-data = "world_model_lab.build_visual_data:main"
world-model-collect-data = "world_model_lab.collect_data:main"
world-model-diagnose = "world_model_lab.diagnose_model:main"
world-model-diagnose-ensemble = "world_model_lab.diagnose_ensemble:main"
world-model-evaluate-rollout = "world_model_lab.evaluate_rollout:main"
world-model-multiseed = "world_model_lab.multiseed_experiment:main"
world-model-plot-training = "world_model_lab.plot_training:main"
world-model-train = "world_model_lab.train_world_model:main"
world-model-train-visual-dynamics-objective = "world_model_lab.train_visual_dynamics_objective:main"
world-model-train-visual-latent = "world_model_lab.train_visual_latent_model:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
